media/sonarr/http-route.yml
kind:       HTTPRoute
apiVersion: gateway.networking.k8s.io/v1

metadata:
  name:      sonarr
  namespace: media

spec:
  parentRefs:
    - name:        traefik-gateway
      namespace:   traefik            # because traefik-gateway is in the traefik namespace
      sectionName: web

  hostnames:
    - sonarr.localhost

  rules:
    - backendRefs:
        - name: sonarr
          port: 8989
